# ekg-elasticsearch

./: .gitignore  CHANGES.md  README.md  default.nix  ekg-elasticsearch.cabal  shell.nix  stack.yaml
System/Metrics/: Json.hs
System/Remote/Monitoring/: Elastic.hs  ElasticSearch.hs
ekg-elasticsearch-examples/: Basic.hs  Ekg.hs  default.nix  ekg-elasticsearch-examples.cabal
examples/: Basic.hs  Ekg.hs  default.nix  ekg-elastic-examples.cabal
