name:                ekg-elasticsearch-examples
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Ford
maintainer:          ben@perurbis.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable ekg-es-example
  main-is:             Basic.hs
  build-depends:       base >=4.6 && <4.11,
                       ekg-core,
                       ekg-elasticsearch
  default-language:    Haskell2010
