name:                ekg-elastic-examples
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          johan.tibell@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable ekg-elastic-examples
  main-is:             Basic.hs
  build-depends:       base >=4.6 && <4.10,
                       ekg-core,
                       ekg-elastic
  default-language:    Haskell2010
